Contrast/Transition Fix

--- a/resources/main.css
+++ b/resources/main.css
@@ -453,7 +453,8 @@ code {
     top: 20%; 
     right: 3%;
     background-color: #a32323;
-    color: var(--textColor);
+    color: white;
+    font-weight: bold;
     border-radius: 25%;
     border: none;
     width: 2em;
@@ -474,7 +475,7 @@ code {
     width: 0; 
     height: 0;
     box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .6);
-    transition: width 300ms, height 300ms, opacity 500ms, left 200ms, top 300ms;
+    transition: width 300ms, height 300ms, opacity 500ms, left 200ms, top 300ms, background-color 300ms;
 }
 
 input {
